--- a/style.css
+++ b/style.css
@@ -63,11 +63,16 @@ height: 3rem;
 border-radius: 10px;
 
 }
+
 .companylogo {
-margin: 0rem 0rem 0 0;
-padding: 0rem 13rem 0 0;
-display: flex;
-text-decoration: none;
+margin-left: 1rem;
+}
+
+.companylogo li {
+margin: 0rem 1rem 0 2rem;
+padding: 0rem 2rem 0 0;
+justify-content:center ;
+list-style-type: none;
 
 
 }
